# pyMVP

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  create_test_vcf.py  harmonized_gec_spec.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
_deprecated_tests/: test_run_gwas_cli.py
docs/: README.md  api_reference.md  generate_performance_dataset.md  output_files.md  quickstart.md
docs/plans/: blink_implementation_plan.md
examples/: 01_basic_gwas.py  02_mlm_with_structure.py  03_hybrid_mlm.py  04_with_covariates.py  05_reading_results.py  06_farmcpu_resampling.py  EXAMPLE_DATA.md  README.md  example_covariates.csv  example_genotypes.vcf.gz.panicle.geno.npy  example_genotypes.vcf.gz.pymvp.map.csv  example_phenotypes.csv  significant_snps.bed
examples/Replicate/: debug_farmcpu.R  run_farmcpu_once.R  run_resampling_collect.R  run_resampling_collect_Rpvals.R  run_resampling_small.R  run_single_pvalues.R  sorghum_farmcpu_gwas_resampling.R  test_mvp.R
panicle/: __init__.py
panicle/association/: __init__.py  blink.py  farmcpu.py  farmcpu_resampling.py  glm.py  glm_fwl_qr.py  hybrid_mlm.py  lrt.py  mlm.py  mlm_loco.py
panicle/cli/: utils.py
panicle/core/: __init__.py  mvp.py
panicle/data/: converters.py  io_utils.py  load_genotype_hapmap.py  load_genotype_plink.py  load_genotype_vcf.py  loaders.py
panicle/matrix/: kinship.py  kinship_loco.py  pca.py
panicle/pipelines/: gwas.py
panicle/utils/: compression.py  data_types.py  stats.py
panicle/visualization/: manhattan.py
pymvp/: __init__.py
pymvp/association/: __init__.py  blink.py  farmcpu.py  farmcpu_resampling.py  glm.py  glm_fwl_qr.py  glm_memory_optimized.py  glm_optimized.py  glm_optimized_phase1.py  hybrid_mlm.py  lrt.py  mlm.py  mlm_loco.py  mlm_optimized.py
pymvp/association/_archived/: farmcpu_conservative.py  farmcpu_jit.py  farmcpu_timed.py  glm_jit.py  glm_optimized.py
pymvp/cli/: utils.py
pymvp/core/: mvp.py
pymvp/data/: converters.py  load_genotype_hapmap.py  load_genotype_plink.py  load_genotype_vcf.py  loaders.py
pymvp/matrix/: kinship.py  kinship_loco.py  pca.py
pymvp/pipelines/: gwas.py
pymvp/tools/: __init__.py  convert_genotype.py
pymvp/utils/: data_types.py  effective_tests.py  memmap_utils.py  perf.py  stats.py
pymvp/visualization/: manhattan.py
scripts/: calc_gblup_sorghum.py  debug_kinship.py  generate_performance_dataset.py  plot_spats_vs_gblup.py  profile_manhattan_plot.py  profile_qq_plot.py  run_GWAS.py  run_farmcpu_v2.py  verify_hybrid.py
tests/: compare_farmcpu_vs_blink_power.py  create_validation_dataset.py  quick_validation_test.py  test_association_stats.py  test_blink_and_farmcpu_unit.py  test_blink_basic.py  test_blink_helpers.py  test_blink_parity.py  test_cli_utils.py  test_convert_genotype.py  test_dynamic_int8_writer.py  test_effective_tests.py  test_farmcpu_binning.py  test_farmcpu_pseudo_qtn_selection.py  test_farmcpu_resampling.py  test_generation.py  test_genotypes.vcf  test_glm_comparison.py  test_glm_parity_simple.py  test_gwas_pipeline_integration.py  test_hybrid_mlm.py  test_load_genotype_plink_more.py  test_loaders_genotype.py  test_loaders_vcf_plink_hapmap.py  test_loco_kinship.py  test_lrt.py  test_matrix_utils.py  test_memmap_utils.py  test_mlm_and_glm_paths.py  test_mvp_core.py  test_pca_additional.py  test_stats_utils.py  test_vcf_genotype_parsing.py  test_visualization.py  validate_implementation_changes.py
tests/r_helpers/: run_blink.R  run_glm.R  run_rmvp_pseudo_qtn_selection.R
tests/validation_datasets/fast_validation_dataset/: dataset_summary.json  genotypes.npz
