[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panicle"
version = "0.1.0"
description = "PANICLE: Python Algorithms for Nucleotide-phenotype Inference and Chromosome-wide Locus Evaluation - A comprehensive GWAS pipeline with Numba JIT acceleration"
authors = [
    {name = "James C. Schnable", email = "james.schnable@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["GWAS", "genomics", "bioinformatics", "genetics", "SNP", "association", "QTL", "phenotype"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.6.0",
    "pandas>=1.2.0",
    "h5py>=3.0.0",
    "matplotlib>=3.3.0",
    "numba>=0.50.0",
    "cyvcf2>=0.30.0",
]

[project.optional-dependencies]
# PLINK .bed support
plink = [
    "bed-reader>=1.0.0",
]
# Parallel processing support
parallel = [
    "joblib>=1.0.0",
]
# Convenience extra to pull in all optional packages
all = [
    "bed-reader>=1.0.0",
    "joblib>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jschnable/PANICLE"
Repository = "https://github.com/jschnable/PANICLE"
Documentation = "https://github.com/jschnable/PANICLE/tree/master/docs"
Issues = "https://github.com/jschnable/PANICLE/issues"
Changelog = "https://github.com/jschnable/PANICLE/blob/master/CHANGELOG.md"

[project.scripts]
panicle-cache-genotype = "panicle.tools.convert_genotype:main"

[tool.setuptools.packages.find]
include = ["panicle*"]

[tool.setuptools.package-data]
panicle = ["py.typed"]
